--- a/package.json
+++ b/package.json
@@ -73,6 +73,12 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
+  "proxy": [{
+    "path": "/api/**", 
+    "target": "http://localhost:8080",
+    "host": "localhost",
+    "secure": false
+  }],
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
